feat: 🎸 replace old blog urls with new zenn urls

--- a/articles/0175849bf26164.md
+++ b/articles/0175849bf26164.md
@@ -134,7 +134,7 @@ class FooControllerTest extends WebTestCase
 }
 ```
 
-> ユーザーを認証済にする方法として、[古典的なBASIC認証を使った方法](/symfony-simulate-login-on-functional-test/) ではなく、[Symfony 5.1から導入された `$client->loginUser()`](https://symfony.com/blog/new-in-symfony-5-1-simpler-login-in-tests) を使用しています。
+> ユーザーを認証済にする方法として、[古典的なBASIC認証を使った方法](https://zenn.dev/ttskch/articles/f0b08200603c0f) ではなく、[Symfony 5.1から導入された `$client->loginUser()`](https://symfony.com/blog/new-in-symfony-5-1-simpler-login-in-tests) を使用しています。
 
 まずは、このテストファイル内に機能テストだけでなくe2eテストも書けるように下準備をしてみます。
 
@@ -285,7 +285,7 @@ Facebook\WebDriver\Exception\UnexpectedAlertOpenException: unexpected alert open
 
 さて、あとはこれらのメソッドを使って実際にe2eテストを実行するコードを追記します。
 
-ここでは、昨日の記事 [[Symfony] EasyAdminのフォームフィールドにStimulusの処理を当てる](/symfony-easyadmin-stimulus/) で作った **「郵便番号を入力したら非同期でAPI通信が走って住所入力欄を補完してくれる」** という画面をイメージしてe2eテストを書いてみることにします。
+ここでは、昨日の記事 [[Symfony] EasyAdminのフォームフィールドにStimulusの処理を当てる](https://zenn.dev/ttskch/articles/af6b65eaade4bc) で作った **「郵便番号を入力したら非同期でAPI通信が走って住所入力欄を補完してくれる」** という画面をイメージしてe2eテストを書いてみることにします。
 
 ![](https://tva1.sinaimg.cn/large/008i3skNgy1gysayyfoi0g30wi09e43i.gif)
 
