--- a/articles/0c6a282fa12353.md
+++ b/articles/0c6a282fa12353.md
@@ -21,9 +21,9 @@ published_at: 2021-01-15
 
 > ちなみに、カスタムバリデーションの書き方については以下の別記事などをご参照ください。
 >
-> * [symfony/formで「どちらか片方の入力は必須、かつ両方入力はNG」をバリデーションする | blog.ttskch](https://blog.ttskch.com/symfony-form-exclusive-or-validation/)
-> * [[Symfony/Validation] Callback制約の使い方 | blog.ttskch](https://blog.ttskch.com/symfony-validation-callback-constraints/)
-> * [[Symfony/Validation] バリデーションから他の制約クラスを呼び出して使う方法 | blog.ttskch](https://blog.ttskch.com/symfony-validation-call-other-constraints/)
+> * [symfony/formで「どちらか片方の入力は必須、かつ両方入力はNG」をバリデーションする](https://zenn.dev/ttskch/articles/344dcc5980d9be)
+> * [[Symfony/Validation] Callback制約の使い方](https://zenn.dev/ttskch/articles/3dbde3d9a14afd)
+> * [[Symfony/Validation] バリデーションから他の制約クラスを呼び出して使う方法](https://zenn.dev/ttskch/articles/8812ca381b8ec9)
 
 というわけで仕方なくjQueryで
 
