--- a/articles/0fa9bb8934f1ef.md
+++ b/articles/0fa9bb8934f1ef.md
@@ -13,7 +13,7 @@ published_at: 2020-05-07
 
 npmライブラリを自分で作っているとき、実際にアプリ側から使いながらライブラリ側の開発をしたいということはたまにあります。
 
-> 例えば [VuePressのテーマを作っているときに、実際にそのテーマを適用したVuePressサイトを動かしながら、テーマの開発をしたい](https://blog.ttskch.com/hello-vuepress-theme-blog-vuetify/) など
+> 例えば [VuePressのテーマを作っているときに、実際にそのテーマを適用したVuePressサイトを動かしながら、テーマの開発をしたい](https://zenn.dev/ttskch/articles/b908a1f6ff7188) など
 
 そのやり方を解説します。
 
