--- a/articles/135c5567bf065c.md
+++ b/articles/135c5567bf065c.md
@@ -22,7 +22,7 @@ published_at: 2020-11-13
 
 > 詳細は
 > 
-> [esaの記事をGitHubにpushする高機能webhookを作った（予約投稿＆frontmatter自由記述） | blog.ttskch](https://blog.ttskch.com/esa2github/)
+> [esaの記事をGitHubにpushする高機能webhookを作った（予約投稿＆frontmatter自由記述）](https://zenn.dev/ttskch/articles/7423c0ab5104fd)
 > 
 > こちらの過去記事をご参照ください。
 
