--- a/articles/13b3a3dc48645d.md
+++ b/articles/13b3a3dc48645d.md
@@ -21,7 +21,7 @@ published_at: 2020-02-23
 
 # league/csvは列名がユニークなCSVしか読み込めない
 
-[こちらの記事](https://blog.ttskch.com/php-league-csv/) でもご紹介した、PHPのCSV操作ライブラリ [league/csv](https://csv.thephpleague.com/) ですが、実は **「列名がユニークなCSVしか読み込めない」** という特徴があります。
+[こちらの記事](https://zenn.dev/ttskch/articles/2e463bf80416a7) でもご紹介した、PHPのCSV操作ライブラリ [league/csv](https://csv.thephpleague.com/) ですが、実は **「列名がユニークなCSVしか読み込めない」** という特徴があります。
 
 例えば、以下のようなCSVファイルがあるとしましょう。
 
