--- a/articles/15467440823b2a.md
+++ b/articles/15467440823b2a.md
@@ -23,9 +23,9 @@ published_at: 2020-05-11
 
 シンプルな例だと、エンティティの `createdAt` プロパティにPrePersistのタイミングで自動で現在日時を入れるとかが考えられます。このとき、機能テストで任意の `createdAt` を持たせたエンティティをフィクスチャで登録したいと思ったら、「エンティティの `createdAt` に現在日時を入れるサービス」をテスト時にだけ「何もしないサービス」で置き換える（モックする）という解法が考えられます。
 
-> LiipTestFixturesBundleを使った機能テストの実践方法については [こちらの過去記事](https://blog.ttskch.com/symfony4-liip-test-fixtures-bundle-practice/) に詳しくまとめています。
+> LiipTestFixturesBundleを使った機能テストの実践方法については [こちらの過去記事](https://zenn.dev/ttskch/articles/85cfc7d291b52a) に詳しくまとめています。
 
-> DoctrineのEntity Listenerについては [こちらの過去記事](https://blog.ttskch.com/symfony-doctrine-entity-listener/) に詳しくまとめています。
+> DoctrineのEntity Listenerについては [こちらの過去記事](https://zenn.dev/ttskch/articles/9d3966774922d0) に詳しくまとめています。
 
 # 実際のやり方
 
