--- a/articles/1f1572cfd2e375.md
+++ b/articles/1f1572cfd2e375.md
@@ -12,7 +12,7 @@ published_at: 2021-06-05
 :::
 
 ::: tip この記事で紹介した手順をライブラリ化して公開しました🎉
-[こちらの別記事](/web-app-pdf-printing-best-practice-npm-library/) で使い方など詳しくご紹介していますので、ぜひご参照ください！
+[こちらの別記事](https://zenn.dev/ttskch/articles/8ee0eaaabf0657) で使い方など詳しくご紹介していますので、ぜひご参照ください！
 :::
 
 # はじめに
