--- a/articles/2007864cec38ad.md
+++ b/articles/2007864cec38ad.md
@@ -33,7 +33,7 @@ Symfony 4.4以上で機能テストを書いていて、以下のようなdeprec
   self::createClient();
 ```
 
-> [liip/test-fixtures-bundle](https://blog.ttskch.com/symfony4-liip-test-fixtures-bundle-practice/) の `FixturesTrait` を導入して `setUp()` 内で `loadFixtureFiles()` を実行している場合は、どうやら内部で `createClient()` が実行されているようなので、テストコード中の1つ目の `createClient()` に対してもこの対応が必要になります。
+> [liip/test-fixtures-bundle](https://zenn.dev/ttskch/articles/85cfc7d291b52a) の `FixturesTrait` を導入して `setUp()` 内で `loadFixtureFiles()` を実行している場合は、どうやら内部で `createClient()` が実行されているようなので、テストコード中の1つ目の `createClient()` に対してもこの対応が必要になります。
 
 毎回 `self::ensureKernelShutdown()` を呼び出すのは手間なので、 `createClient()` メソッドをオーバーライドしてしまうのがよいと思います。
 
