--- a/articles/24050fb9c788ff.md
+++ b/articles/24050fb9c788ff.md
@@ -21,8 +21,8 @@ published_at: 2020-03-22
 
 # この連載の目次
 
-* [第1章 ゼロからデプロイまで](https://blog.ttskch.com/rails-tutorial-01/)
-* [第2章 Toyアプリケーション](https://blog.ttskch.com/rails-tutorial-02/)
+* [第1章 ゼロからデプロイまで](https://zenn.dev/ttskch/articles/89156af67a7af7)
+* [第2章 Toyアプリケーション](https://zenn.dev/ttskch/articles/c4d04748669ec1)
 * **第3章 ほぼ静的なページの作成**
 * 第4章 Rails風味のRuby（準備中）
 * 第5章 レイアウトを作成する（準備中）
