--- a/articles/2857d598fe517d.md
+++ b/articles/2857d598fe517d.md
@@ -13,7 +13,7 @@ published_at: 2020-03-28
 
 PHPのCSVライブラリ [league/csv](https://csv.thephpleague.com/) を使って、文字コードがUTF-16のCSVファイルを扱っていたら、謎の現象で正常に読めない場面があり、強引に対応したのでその顛末を記録しておきたいと思います😓
 
-> league/csvについては [こちらの記事](https://blog.ttskch.com/php-league-csv/) で詳しく紹介していますので、よろしければあわせてご参照ください。
+> league/csvについては [こちらの記事](https://zenn.dev/ttskch/articles/2e463bf80416a7) で詳しく紹介していますので、よろしければあわせてご参照ください。
 
 # 発生した現象
 
