--- a/articles/2c776ee3578d5b.md
+++ b/articles/2c776ee3578d5b.md
@@ -92,7 +92,7 @@ Googleが既定の検索エンジンになっていて、他に `Yahoo! JAPAN` `
 
 ただ、ゴミが増えてくると一部の記憶を削除したくなることもあります。
 
-[過去記事](https://blog.ttskch.com/chrome-address-bar-auto-complete-deletion/) にも書いたのですが、実はこれ削除する方法があります。
+[過去記事](https://zenn.dev/ttskch/articles/a491e6dcbec7b2) にも書いたのですが、実はこれ削除する方法があります。
 
 * アドレスバーに途中まで入力してオートコンプリート候補を表示させる
 * 削除したいものが選択されている状態で、 `Shift + fn + delete` を入力
