--- a/articles/2d9215dabee61d.md
+++ b/articles/2d9215dabee61d.md
@@ -19,7 +19,7 @@ Netlifyでは、Functionsという機能（AWS Lambdaのラッパー）を使っ
 
 Netlify（ネットリファイ）は静的サイトを無料からホスティングできるWebサービスです。
 
-[本ブログのこちらの記事](https://blog.ttskch.com/angular-netlify-tutorial/) でも詳しく説明しているので、よろしければご参照ください。
+[本ブログのこちらの記事](https://zenn.dev/ttskch/articles/a6af4db03ff11c) でも詳しく説明しているので、よろしければご参照ください。
 
 # NetlifyのFunctions機能とは
 
