--- a/articles/344dcc5980d9be.md
+++ b/articles/344dcc5980d9be.md
@@ -11,7 +11,7 @@ published_at: 2020-04-29
 この記事は、2020-04-29に別のブログ媒体に投稿した記事のアーカイブです。
 :::
 
-以前、[symfony/formで「どちらか片方の入力は必須」をシュッと作る](https://blog.ttskch.com/symfony-form-required-at-least-one/) という記事を書きました。
+以前、[symfony/formで「どちらか片方の入力は必須」をシュッと作る](https://zenn.dev/ttskch/articles/5ee3c246bf65c2) という記事を書きました。
 
 今回はこれの発展系というか、もう少し複雑な要件を考えてみます。
 
@@ -55,7 +55,7 @@ class WishListEntry
 
 # カスタムバリデーションを作る
 
-今回は [symfony/formで「どちらか片方の入力は必須」をシュッと作る](https://blog.ttskch.com/symfony-form-required-at-least-one/) のときよりも要件が少し複雑ですし、FormTypeで対応するのではなくカスタムバリデーションを書きたいと思います。
+今回は [symfony/formで「どちらか片方の入力は必須」をシュッと作る](https://zenn.dev/ttskch/articles/5ee3c246bf65c2) のときよりも要件が少し複雑ですし、FormTypeで対応するのではなくカスタムバリデーションを書きたいと思います。
 
 カスタムバリデーションの作り方は [こちらの公式ドキュメント](https://symfony.com/doc/current/validation/custom_constraint.html) にすべて書いてあります😇
 
