--- a/articles/400806fb851ccd.md
+++ b/articles/400806fb851ccd.md
@@ -15,7 +15,7 @@ published_at: 2021-12-03
 
 > ちなみに、僕はよく [TwitterにもSymfonyネタを呟いている](https://twitter.com/search?q=from%3Attskch%20(symfony%20OR%20doctrine)&src=typed_query&f=live) ので、よろしければぜひ [フォローしてやってください🕊🤲](https://twitter.com/ttskch)
 
-昨日も僕の記事で、[[Symfony][Doctrine] 論理削除と変更履歴とDBのビューを駆使して複雑な集計ロジックをシンプルなコードで実装した例](/symfony-doctrine-soft-delete-change-log-mysql-view) でした✨
+昨日も僕の記事で、[[Symfony][Doctrine] 論理削除と変更履歴とDBのビューを駆使して複雑な集計ロジックをシンプルなコードで実装した例](https://zenn.dev/ttskch/articles/52cb844302a216) でした✨
 
 # はじめに
 
