--- a/articles/4518b886d708c7.md
+++ b/articles/4518b886d708c7.md
@@ -13,7 +13,7 @@ published_at: 2022-02-10
 
 過去に
 
-> [[超簡単] SymfonyプロジェクトにSentryを導入する | blog.ttskch](https://blog.ttskch.com/symfony-sentry/)
+> [[超簡単] SymfonyプロジェクトにSentryを導入する](https://zenn.dev/ttskch/articles/73d8bdce973b0b)
 
 という記事を書きましたが、Sentryがバージョン4系になって設定方法などが多少変わっていたので、改めて導入手順をまとめておきたいと思います。
 
@@ -92,7 +92,7 @@ monolog:
 
 404 Not Foundや405 Method Not Allowedなどのエラーは報告しないように設定しておきたいこともあるかと思います。
 
-Sentry3系では [`config/packages/sentry.yaml` に `excluded_exceptions` というオプションで設定することができました](https://blog.ttskch.com/symfony-sentry/#%E7%89%B9%E5%AE%9A%E3%81%AE%E4%BE%8B%E5%A4%96%E3%82%92%E5%A0%B1%E5%91%8A%E3%81%97%E3%81%AA%E3%81%84%E3%82%88%E3%81%86%E3%81%AB%E3%81%99%E3%82%8B) が、4系ではこのオプションは廃止されています。
+Sentry3系では [`config/packages/sentry.yaml` に `excluded_exceptions` というオプションで設定することができました](https://zenn.dev/ttskch/articles/73d8bdce973b0b#%E7%89%B9%E5%AE%9A%E3%81%AE%E4%BE%8B%E5%A4%96%E3%82%92%E5%A0%B1%E5%91%8A%E3%81%97%E3%81%AA%E3%81%84%E3%82%88%E3%81%86%E3%81%AB%E3%81%99%E3%82%8B) が、4系ではこのオプションは廃止されています。
 
 代わりにMonologの `excluded_http_codes` オプションを使って設定します。
 
