--- a/articles/45f27d84969a15.md
+++ b/articles/45f27d84969a15.md
@@ -13,7 +13,7 @@ published_at: 2020-05-03
 
 小ネタです。
 
-Macで [Alfredというランチャーを愛用している](https://blog.ttskch.com/mac-alfred-workflow-introducing/) んですが、Workflowのキーワードにエイリアスを設定したくなって無理やり対応したので共有です。
+Macで [Alfredというランチャーを愛用している](https://zenn.dev/ttskch/articles/f1113eaad323e0) んですが、Workflowのキーワードにエイリアスを設定したくなって無理やり対応したので共有です。
 
 # キーワードが一般的すぎると関係ないアプリがたくさん候補に出てきて邪魔問題
 
