--- a/articles/4f94c9b780931c.md
+++ b/articles/4f94c9b780931c.md
@@ -13,7 +13,7 @@ published_at: 2020-05-09
 
 # やりたかったこと
 
-Vuetifyの [Navigation drawer](https://vuetifyjs.com/en/components/navigation-drawers/) を使って、[スマホ表示のときにだけグローバルナビゲーションがDrawerに変わるUI](https://blog.ttskch.com/nuxtjs-vuetify-navigation-tutorial/) を作っていました。
+Vuetifyの [Navigation drawer](https://vuetifyjs.com/en/components/navigation-drawers/) を使って、[スマホ表示のときにだけグローバルナビゲーションがDrawerに変わるUI](https://zenn.dev/ttskch/articles/23cbe99ac4271a) を作っていました。
 
 もちろんPCでウィンドウの幅を極端に狭くした場合にもスマホ相当の表示になってDrawerを出すことができるのですが、そうしてDrawerを出したあとでウィンドウサイズを大きくされると、全体はPC向けの表示になるのにDrawerだけは出たままというイマイチな挙動になります。
 
