--- a/articles/51499cc959d643.md
+++ b/articles/51499cc959d643.md
@@ -11,7 +11,7 @@ published_at: 2020-04-02
 この記事は、2020-04-02に別のブログ媒体に投稿した記事のアーカイブです。
 :::
 
-この度 [フリーランスとしての門出を迎えた](https://blog.ttskch.com/thank-you-quartet-communications/) わけですが、開業に当たって屋号「[Kannade](https://kannade.jp/)」のロゴデザインを99designsというサイトで発注したところ、4.8万円でめっちゃセンスのいいデザイン案が大量に集まって素晴らしい体験だったので共有します。
+この度 [フリーランスとしての門出を迎えた](https://note.com/ttskch/n/n4840e862f343) わけですが、開業に当たって屋号「[Kannade](https://kannade.jp/)」のロゴデザインを99designsというサイトで発注したところ、4.8万円でめっちゃセンスのいいデザイン案が大量に集まって素晴らしい体験だったので共有します。
 
 # 99designsとは
 
