--- a/articles/5a317964a31e26.md
+++ b/articles/5a317964a31e26.md
@@ -56,7 +56,7 @@ Shut down, bye!
 
 ようです。
 
-僕はローカルのPHP環境は [phpenvで構築している](https://blog.ttskch.com/mac-phpenv-nodebrew/) ので、Homebrewで入れたPHPが起動されるのは想定している挙動ではありませんでした。
+僕はローカルのPHP環境は [phpenvで構築している](https://zenn.dev/ttskch/articles/2d05e5e3fd6083) ので、Homebrewで入れたPHPが起動されるのは想定している挙動ではありませんでした。
 
 とりあえず `symfony local:php:list` で状況を確認してみます。
 
