--- a/articles/5aa4db83d61f3d.md
+++ b/articles/5aa4db83d61f3d.md
@@ -13,12 +13,12 @@ published_at: 2020-12-06
 
 [Symfony Advent Calendar 2020](https://qiita.com/advent-calendar/2020/symfony) の6日目の記事です！🎄🌙小ネタですみません！
 
-昨日も僕の記事で、[[Symfony] コレクションプロパティのバリデーションにおいて子オブジェクト側のNotBlank制約が無視されるケースについて](https://blog.ttskch.com/symfony-not-blank-validation-for-collection-property/) でした✨
+昨日も僕の記事で、[[Symfony] コレクションプロパティのバリデーションにおいて子オブジェクト側のNotBlank制約が無視されるケースについて](https://zenn.dev/ttskch/articles/c596276f0d50d3) でした✨
 
 ちなみに、僕はよく [TwitterにもSymfonyネタを呟いている](https://twitter.com/search?q=from%3Attskch%20(symfony%20OR%20doctrine)&src=typed_query&f=live) ので、よろしければぜひ [フォローしてやってください🕊🤲](https://twitter.com/ttskch)
 
 > あと、この記事とよく似た内容の以下のような記事もあるので、よろしければあわせてご参照ください🤲
-> [[Symfony/Form] 継承元のFromTypeの項目のオプションを部分的に変更する方法 | blog.ttskch](https://blog.ttskch.com/symfony-form-modify-options-of-base-formtype/)
+> [[Symfony/Form] 継承元のFromTypeの項目のオプションを部分的に変更する方法](https://zenn.dev/ttskch/articles/cd754b537f10b9)
 
 # やりたいこと
 
@@ -99,7 +99,7 @@ class FooType extends AbstractType
 
 簡単ですね！
 
-> [[Symfony/Form] 継承元のFromTypeの項目のオプションを部分的に変更する方法 | blog.ttskch](https://blog.ttskch.com/symfony-form-modify-options-of-base-formtype/)
+> [[Symfony/Form] 継承元のFromTypeの項目のオプションを部分的に変更する方法](https://zenn.dev/ttskch/articles/cd754b537f10b9)
 
 こちらの過去記事で継承元の項目をいじったときとやっていることはまったく同じです👌
 
@@ -120,7 +120,7 @@ $fieldOptions['label_attr']['class'] = 'required';
 
 などが必要なこともあるかもしれません。その理由については↓昨日の記事をご参照ください✋
 
-> [[Symfony] コレクションプロパティのバリデーションにおいて子オブジェクト側のNotBlank制約が無視されるケースについて | blog.ttskch](https://blog.ttskch.com/symfony-not-blank-validation-for-collection-property/) 
+> [[Symfony] コレクションプロパティのバリデーションにおいて子オブジェクト側のNotBlank制約が無視されるケースについて](https://zenn.dev/ttskch/articles/c596276f0d50d3) 
 
 以上です！
 
