--- a/articles/5acf1e420cc28f.md
+++ b/articles/5acf1e420cc28f.md
@@ -47,7 +47,7 @@ class Sample extends StatelessWidget {
 
 > `Builder()` で囲っている理由については
 >
-> [[Flutter] SnackBarを使おうとすると Scaffold.of() called with（略）と言われるときの対応 | blog.ttskch](https://blog.ttskch.com/flutter-snackbar-context-not-contain-scaffold/)
+> [[Flutter] SnackBarを使おうとすると Scaffold.of() called with（略）と言われるときの対応](https://zenn.dev/ttskch/articles/5efbfe52d26157)
 >
 > こちらをご参照ください。
 
