--- a/articles/5cffe51b9e169f.md
+++ b/articles/5cffe51b9e169f.md
@@ -27,7 +27,7 @@ published_at: 2020-04-30
 **※ 追記**
 
 最近は↓こっちの方法を好んで使っています。  
-[[Symfony] 他のエンティティの状態によって値が決まるような属性はエンティティ自体に持たせるよりTwig関数を作るほうがよさそう](https://blog.ttskch.com/symfony-twig-function-to-calc-entity-state)
+[[Symfony] 他のエンティティの状態によって値が決まるような属性はエンティティ自体に持たせるよりTwig関数を作るほうがよさそう](https://zenn.dev/ttskch/articles/87a9b1433e7155)
 
 # 例示したようなシンプルな要件なら
 
@@ -77,7 +77,7 @@ class Task
 
 そこで、タイトルに書いたようにEntity Listenerを使ってPostLoadのタイミングで計算させるようにすると色々スッキリしてよいですよというお話です。（前置きがめっちゃ長くなった）
 
-なお、Entity Listener自体の紹介は [こちらの記事](https://blog.ttskch.com/symfony-doctrine-entity-listener/) に詳しく書いてありますので、よく知らないという方は先にこちらをご参照ください
+なお、Entity Listener自体の紹介は [こちらの記事](https://zenn.dev/ttskch/articles/9d3966774922d0) に詳しく書いてありますので、よく知らないという方は先にこちらをご参照ください
 
 # 具体的なコードの例
 
