--- a/articles/6304fbb461e4ee.md
+++ b/articles/6304fbb461e4ee.md
@@ -13,7 +13,7 @@ published_at: 2020-06-29
 
 Flutterの公式サイトに、チュートリアルよりも前にやってみる用のコンテンツとして [Write your first Flutter app](https://flutter.dev/docs/get-started/codelab) というものが用意されています。
 
-[前回の記事](https://blog.ttskch.com/flutter-intro-02-first-app-1/) ではこれのPart 1を解説したので、今回は続きである [Part 2](https://codelabs.developers.google.com/codelabs/first-flutter-app-pt2/#0) の解説をしていきたいと思います。
+[前回の記事](https://zenn.dev/ttskch/articles/9ad8f78cb2a826) ではこれのPart 1を解説したので、今回は続きである [Part 2](https://codelabs.developers.google.com/codelabs/first-flutter-app-pt2/#0) の解説をしていきたいと思います。
 
 # Step 1：イントロダクション
 
