--- a/articles/675931a29dfdfa.md
+++ b/articles/675931a29dfdfa.md
@@ -19,7 +19,7 @@ published_at: 2020-07-18
 
 このような実装は、Doctrineの [MappedSuperclass](https://www.doctrine-project.org/projects/doctrine-orm/en/2.7/reference/inheritance-mapping.html) という機能を使うことで実現できます。
 
-> [[Symfony][Doctrine] Single Table Inheritanceを使ってエンティティに基底クラスを持たせる | blog.ttskch](https://blog.ttskch.com/symfony-doctrine-single-table-inheritance)
+> [[Symfony][Doctrine] Single Table Inheritanceを使ってエンティティに基底クラスを持たせる](https://zenn.dev/ttskch/articles/890af3fe4e0a92)
 >
 > こちらの記事で [`Single Table Inheritance`](https://www.doctrine-project.org/projects/doctrine-orm/en/2.7/reference/inheritance-mapping.html#single-table-inheritance) を使った方法も紹介しています。
 
@@ -151,7 +151,7 @@ class Job
 
 なので、例えば `worker_id` カラムに `1` が入っていたとして、それが `employee` テーブルの `id=1` を表すのか、 `freelancer` テーブルの `id=1` を表すのかは判別不可能なので、機能しません。
 
-> [【Symfony/Doctrine】Single Table Inheritanceを使ってエンティティに基底クラスを持たせる | blog.ttskch](https://blog.ttskch.com/symfony-doctrine-single-table-inheritance)
+> [【Symfony/Doctrine】Single Table Inheritanceを使ってエンティティに基底クラスを持たせる](https://zenn.dev/ttskch/articles/890af3fe4e0a92)
 >
 > こちらの記事で [`Single Table Inheritance`](https://www.doctrine-project.org/projects/doctrine-orm/en/2.7/reference/inheritance-mapping.html#single-table-inheritance) を使った方法を紹介しています。こちらの方法ならリレーションシップを持たせることも可能なので、参考にしてみてください。
 
