--- a/articles/78ff8899e3043f.md
+++ b/articles/78ff8899e3043f.md
@@ -59,4 +59,4 @@ Node.js組み込みの [Cryptoモジュール](https://nodejs.org/api/crypto.htm
 
 # See also
 
-拙作の [esa2github](https://blog.ttskch.com/esa2github/) に [実際のコードがある](https://github.com/ttskch/esa2github/blob/ee9b24c268a4b188c27cdaa99c00bd187dfae2c8/src/index.js#L17-L24) ので、あわせて参考にしてみてください✋
+拙作の [esa2github](https://zenn.dev/ttskch/articles/7423c0ab5104fd) に [実際のコードがある](https://github.com/ttskch/esa2github/blob/ee9b24c268a4b188c27cdaa99c00bd187dfae2c8/src/index.js#L17-L24) ので、あわせて参考にしてみてください✋
