--- a/articles/79a6c9b8b7c38f.md
+++ b/articles/79a6c9b8b7c38f.md
@@ -33,7 +33,7 @@ published_at: 2020-06-05
 
 実は、[choice_attr](https://symfony.com/doc/current/reference/forms/types/choice.html#choice-attr) オプションを使えば簡単に実装できます。
 
-> [こちらの過去記事](https://blog.ttskch.com/symfony-form-select2-interactive-choices/) でやったこととほとんど同じですね。
+> [こちらの過去記事](https://zenn.dev/ttskch/articles/54867c7ba79e92) でやったこととほとんど同じですね。
 
 具体的なコードの例は以下のような感じです。
 
