--- a/articles/81ab49293fc84f.md
+++ b/articles/81ab49293fc84f.md
@@ -17,7 +17,7 @@ published_at: 2020-02-01
 
 以下の記事でコンセプトや使い方について詳しく解説していますので、よろしければこちらもご参照ください！
 
-[[Symfony] シンプルでカスタマイズしやすい最強のページネーションバンドル | blog.ttskch](https://blog.ttskch.com/symfony-most-thin-and-simple-pagination-bundle/)
+[[Symfony] シンプルでカスタマイズしやすい最強のページネーションバンドル](https://zenn.dev/ttskch/articles/d26f13131212bc)
 
 ---
 
