--- a/articles/876149ba8a5183.md
+++ b/articles/876149ba8a5183.md
@@ -19,7 +19,7 @@ published_at: 2020-12-25
 
 # はじめに
 
-僕は [今年の4月にベンチャー企業のCTOからフリーランスエンジニアにジョブチェンジしました](https://blog.ttskch.com/thank-you-quartet-communications/)。
+僕は [今年の4月にベンチャー企業のCTOからフリーランスエンジニアにジョブチェンジしました](https://note.com/ttskch/n/n4840e862f343)。
 
 フリーランスになってからの9ヶ月間で、前職のCTO時代の直近5年分ぐらいはコードを書いたと思います笑
 
