--- a/articles/87a9b1433e7155.md
+++ b/articles/87a9b1433e7155.md
@@ -11,11 +11,11 @@ published_at: 2020-06-26
 この記事は、2020-06-26に別のブログ媒体に投稿した記事のアーカイブです。
 :::
 
-以前、[[Symfony] 他のエンティティの状態によって値が決まるような属性はEntityListenerのPostLoadでセットしてあげる](https://blog.ttskch.com/symfony-eneity-listener-postload-practices) という記事を書きましたが、最近はそれよりもこっちのやり方のほうがいいなと思っているので残しておきます。
+以前、[[Symfony] 他のエンティティの状態によって値が決まるような属性はEntityListenerのPostLoadでセットしてあげる](https://zenn.dev/ttskch/articles/5cffe51b9e169f) という記事を書きましたが、最近はそれよりもこっちのやり方のほうがいいなと思っているので残しておきます。
 
 # やりたいこと
 
-要件の具体例は [過去記事](https://blog.ttskch.com/symfony-eneity-listener-postload-practices) のほうを参照していただきたいのですが、要するに何がしたいかと言うと、
+要件の具体例は [過去記事](https://zenn.dev/ttskch/articles/5cffe51b9e169f) のほうを参照していただきたいのですが、要するに何がしたいかと言うと、
 
 * エンティティがある
 * そのエンティティは他のエンティティの状態によって決まるような属性を持っている
