--- a/articles/8812ca381b8ec9.md
+++ b/articles/8812ca381b8ec9.md
@@ -19,7 +19,7 @@ published_at: 2020-07-27
 
 # Before
 
-[[Symfony/Validation] Callback制約の使い方 | blog.ttskch](https://blog.ttskch.com/symfony-validation-callback-constraints/)
+[[Symfony/Validation] Callback制約の使い方](https://zenn.dev/ttskch/articles/3dbde3d9a14afd)
 
 こちらの過去記事 のシチュエーションを例にとります。
 
@@ -163,7 +163,7 @@ class User
 
 例えば `Choice` 制約に `callback` 引数をつけて使う場合のBefore/Afterはこんな感じです。（これも、Afterのほうが良い実装だとかそういう話ではありません。あくまで例です🙏）
 
-> 参考：[[Symfony] エンティティのプロパティが定数をとるときに僕がよくやる実装 | blog.ttskch](https://blog.ttskch.com/symfony-entity-property-only-for-constants/)
+> 参考：[[Symfony] エンティティのプロパティが定数をとるときに僕がよくやる実装](https://zenn.dev/ttskch/articles/ee1e8fae5e5773)
 
 ## Before
 
