--- a/articles/89156af67a7af7.md
+++ b/articles/89156af67a7af7.md
@@ -22,8 +22,8 @@ published_at: 2020-03-19
 # この連載の目次
 
 * **第1章 ゼロからデプロイまで**
-* [第2章 Toyアプリケーション](https://blog.ttskch.com/rails-tutorial-02/)
-* [第3章 ほぼ静的なページの作成](https://blog.ttskch.com/rails-tutorial-03/)
+* [第2章 Toyアプリケーション](https://zenn.dev/ttskch/articles/c4d04748669ec1)
+* [第3章 ほぼ静的なページの作成](https://zenn.dev/ttskch/articles/24050fb9c788ff)
 * 第4章 Rails風味のRuby（準備中）
 * 第5章 レイアウトを作成する（準備中）
 * 第6章 ユーザーのモデルを作成する（準備中）
