--- a/articles/949adee91db98f.md
+++ b/articles/949adee91db98f.md
@@ -120,7 +120,7 @@ public function setValue(&$objectOrArray, $propertyPath, $value)
 
 どうやら `$this->writeProperty($zval, $propertyPath, $value)` を実行しようとして例外になっているようです。
 
-[ステップ実行](https://blog.ttskch.com/phpstorm-xdebug-step-by-step-execution/) してみると分かりますが、問題の例外発生時、上記のコードにおいて各変数の値は
+[ステップ実行](https://zenn.dev/ttskch/articles/ee8298de80efbf) してみると分かりますが、問題の例外発生時、上記のコードにおいて各変数の値は
 
 | 変数 | 値 |
 | --- | --- |
