--- a/articles/95cfa30390241c.md
+++ b/articles/95cfa30390241c.md
@@ -31,7 +31,7 @@ published_at: 2020-03-02
 * ペンダントライトとシーリングの間に [オーム電機のOCR-CRS01W](https://www.amazon.co.jp/dp/B07GSYPK8D?tag=ttskch-22) を設置
 * いずれも付属の赤外線リモコンによってコンセント・シーリングそれぞれの根元で電源のON/OFFが制御できるようになるというもの
 * これらの赤外線信号を [Nature Remo](https://www.amazon.co.jp/dp/B07JR6PVTD?tag=ttskch-22) に登録しておく
-* スマートボタン「[flic](https://flic.io/?aff=28)」（[こちらの記事](https://blog.ttskch.com/ceiling-light-solution-with-flic/)で詳しく紹介しています）からNature RemoのAPI経由でコンセント・シーリングのON/OFFを行う
+* スマートボタン「[flic](https://flic.io/?aff=28)」（[こちらの記事](https://note.com/ttskch/n/nd01d69fd0068)で詳しく紹介しています）からNature RemoのAPI経由でコンセント・シーリングのON/OFFを行う
 
 しかし、この構成には以下の点で不満がありました。
 
