--- a/articles/9641f8962c4d05.md
+++ b/articles/9641f8962c4d05.md
@@ -98,7 +98,7 @@ GAタグは、Google Analyticsの管理画面上で発行できます。
 
 この場合、 `id` や `class` などを使ってクリック対象のDOM要素を指定するといった少し複雑な設定が必要となります。
 
-> 「DOM要素」「 `id` 」「 `class` 」等については [こちらの記事](https://blog.ttskch.com/html-css-js-basic/) で詳しく説明していますので、参考にしてみてください。
+> 「DOM要素」「 `id` 」「 `class` 」等については [こちらの記事](https://zenn.dev/ttskch/articles/69c8553acbc68c) で詳しく説明していますので、参考にしてみてください。
 
 # まとめ
 
