--- a/articles/a28af2bfff5751.md
+++ b/articles/a28af2bfff5751.md
@@ -13,7 +13,7 @@ published_at: 2020-04-27
 
 小ネタです。
 
-Symfonyでエンティティが変更されたときに何かしたい場合、DoctrineのEntity Listenerが便利です。（詳しくは [こちらの記事](https://blog.ttskch.com/symfony-doctrine-entity-listener/) をご参照ください）
+Symfonyでエンティティが変更されたときに何かしたい場合、DoctrineのEntity Listenerが便利です。（詳しくは [こちらの記事](https://zenn.dev/ttskch/articles/9d3966774922d0) をご参照ください）
 
 エンティティの中でも特定のプロパティが変更されたときにだけ何かしたいというケースはよくあると思いますが、Entity Listenerでどうすれば実現できるでしょうか。
 
