--- a/articles/a2b1e8c8854774.md
+++ b/articles/a2b1e8c8854774.md
@@ -47,7 +47,7 @@ Statefulウィジェットの例としては、 [`Checkbox`](https://api.flutter
 
 今回のサンプルアプリでは `FavoriteWidget` というウィジェットを作って、自分自身に状態の管理をさせることにします。
 
-ウィジェットと状態の分離についてより詳細に学びたい場合は、公式サイトの [Managing state](https://flutter.dev/docs/development/ui/interactive#managing-state) というコンテンツを参照するとよいでしょう。（本ブログでの解説記事は [こちら](https://blog.ttskch.com/flutter-intro-06-managing-state)）
+ウィジェットと状態の分離についてより詳細に学びたい場合は、公式サイトの [Managing state](https://flutter.dev/docs/development/ui/interactive#managing-state) というコンテンツを参照するとよいでしょう。（本ブログでの解説記事は [こちら](https://zenn.dev/ttskch/articles/3e2a80a44b08ee)）
 
 # Step 2： `StatefulWidget` を継承したウィジェットを作る
 
