--- a/articles/a518f850808953.md
+++ b/articles/a518f850808953.md
@@ -13,7 +13,7 @@ published_at: 2020-04-24
 
 以前、以下の記事でSymfonyアプリにユーザーログイン機能を追加る基本的な手順を説明しました。
 
-> [[Symfony] FOSUserBundleを使わなくても15分でユーザーログインは実装できる | blog.ttskch](https://blog.ttskch.com/symfony-no-longer-needs-fosuserbundle/)
+> [[Symfony] FOSUserBundleを使わなくても15分でユーザーログインは実装できる](https://zenn.dev/ttskch/articles/edbc02bc6881a3)
 
 今回はこれの少しだけ発展編です。
 
@@ -21,9 +21,9 @@ published_at: 2020-04-24
 
 また、以下の記事で解説していますが、
 
-> [Symfonyでログイン後の画面を機能テストする方法【簡単です】 | blog.ttskch](https://blog.ttskch.com/symfony-simulate-login-on-functional-test/)
+> [Symfonyでログイン後の画面を機能テストする方法【簡単です】](https://zenn.dev/ttskch/articles/f0b08200603c0f)
 
-フィクスチャを使ってログイン後の画面を機能テストしたい場合に、Userエンティティが `password` プロパティしか持たないと、[記事内で解説しているとおり](https://blog.ttskch.com/symfony-simulate-login-on-functional-test/#2)、
+フィクスチャを使ってログイン後の画面を機能テストしたい場合に、Userエンティティが `password` プロパティしか持たないと、[記事内で解説しているとおり](https://zenn.dev/ttskch/articles/f0b08200603c0f#2)、
 
 1. `bin/console security:encode-password {パスワード}` パスワードをエンコードする
 2. エンコードされたパスワードハッシュをフィクスチャに書く
@@ -68,7 +68,7 @@ public function eraseCredentials()
 
 次に、Doctrineの [Entity Listener](https://symfony.com/doc/current/bundles/DoctrineBundle/entity-listeners.html) という機能を使って `preFlush` Lifecycle Eventsをフックし、平文パスワードをエンコードしたものが自動で `password` プロパティにセットされるようにします。
 
-Entity Listenerの詳しい使い方については [こちらの記事](https://blog.ttskch.com/symfony-doctrine-entity-listener/) をご参照ください。
+Entity Listenerの詳しい使い方については [こちらの記事](https://zenn.dev/ttskch/articles/9d3966774922d0) をご参照ください。
 
 以下のような内容で実装します。
 
