--- a/articles/a87886459cde58.md
+++ b/articles/a87886459cde58.md
@@ -21,7 +21,7 @@ published_at: 2021-12-16
 
 この記事はほぼ以下の過去記事の焼き増しです😂
 
-> [[Symfony] DoctrineのpreUpdateで他のエンティティの生成をやろうとしたけどできなかった話（解決策あり） | blog.ttskch](https://blog.ttskch.com/symfony-doctrine-preupdate/)
+> [[Symfony] DoctrineのpreUpdateで他のエンティティの生成をやろうとしたけどできなかった話（解決策あり）](https://zenn.dev/ttskch/articles/7045dbc46869d4)
 
 通常、「エンティティの特定のプロパティが変更されていたらこういう処理をする」といったものは [EntityListener](https://symfony.com/bundles/DoctrineBundle/current/entity-listeners.html) の [`preUpdate`](https://www.doctrine-project.org/projects/doctrine-orm/en/2.10/reference/events.html#preupdate) に書くことが多いと思います。
 
