--- a/articles/aa9d415a8d1d1a.md
+++ b/articles/aa9d415a8d1d1a.md
@@ -19,7 +19,7 @@ published_at: 2020-12-23
 
 一昨日の僕の記事
 
-> [[Symfony] @Templateアノテーションを使わないほうがいい理由 | blog.ttskch](https://blog.ttskch.com/symfony-template-annotation-is-deprecated/) 
+> [[Symfony] @Templateアノテーションを使わないほうがいい理由](https://zenn.dev/ttskch/articles/07bd8c54d5fdd3) 
 
 に対するアンサーエントリー的な内容で嬉しかったです😂
 
@@ -52,7 +52,7 @@ public function index(Request $request)
 
 > こちらの過去記事も合わせてどうぞ。
 >
-> [[Symfony] Security Voterを使って「リソースの所有者でないと編集不可」を実装してみよう | blog.ttskch](https://blog.ttskch.com/symfony-security-voter/)
+> [[Symfony] Security Voterを使って「リソースの所有者でないと編集不可」を実装してみよう](https://zenn.dev/ttskch/articles/5ef96bf6e9d835)
 
 # やり方
 
