--- a/articles/ab2973d60ead0a.md
+++ b/articles/ab2973d60ead0a.md
@@ -13,7 +13,7 @@ published_at: 2020-12-10
 
 [Symfony Advent Calendar 2020](https://qiita.com/advent-calendar/2020/symfony) の10日目の記事です！🎄🌙
 
-昨日も僕の記事で、[[Symfony] UniqueEntityで複合ユニークを設定した際に対象のフィールドすべてにエラーを表示する方法](https://blog.ttskch.com/symfony-unique-entity-show-error-onto-all-fields/) でした✨
+昨日も僕の記事で、[[Symfony] UniqueEntityで複合ユニークを設定した際に対象のフィールドすべてにエラーを表示する方法](https://zenn.dev/ttskch/articles/27ed994f200eb0) でした✨
 
 > ちなみに、僕はよく [TwitterにもSymfonyネタを呟いている](https://twitter.com/search?q=from%3Attskch%20(symfony%20OR%20doctrine)&src=typed_query&f=live) ので、よろしければぜひ [フォローしてやってください🕊🤲](https://twitter.com/ttskch)
 
@@ -96,7 +96,7 @@ $this->assertStringContainsString('mocked result', $crawler->filter('.result')->
 
 詳細は以下の別記事をご参照ください。
 
-> [[Symfony] @Templateアノテーションを使わないほうがいい理由 | blog.ttskch](https://blog.ttskch.com/symfony-template-annotation-is-deprecated/)
+> [[Symfony] @Templateアノテーションを使わないほうがいい理由](https://zenn.dev/ttskch/articles/07bd8c54d5fdd3)
 
 # 具象クラスではなくインターフェースに対してサービスをバインドしている場合
 
