--- a/articles/b81bc3c9e04be4.md
+++ b/articles/b81bc3c9e04be4.md
@@ -33,7 +33,7 @@ class FooListener
 }
 ```
 
-> EntityListenerについは [こちらの過去記事](https://blog.ttskch.com/symfony-doctrine-entity-listener/) をご参照ください✋
+> EntityListenerについは [こちらの過去記事](https://zenn.dev/ttskch/articles/9d3966774922d0) をご参照ください✋
 
 # 問題
 
