--- a/articles/c4d04748669ec1.md
+++ b/articles/c4d04748669ec1.md
@@ -21,9 +21,9 @@ published_at: 2020-03-20
 
 # この連載の目次
 
-* [第1章 ゼロからデプロイまで](https://blog.ttskch.com/rails-tutorial-01/)
+* [第1章 ゼロからデプロイまで](https://zenn.dev/ttskch/articles/89156af67a7af7)
 * **第2章 Toyアプリケーション**
-* [第3章 ほぼ静的なページの作成](https://blog.ttskch.com/rails-tutorial-03/)
+* [第3章 ほぼ静的なページの作成](https://zenn.dev/ttskch/articles/24050fb9c788ff)
 * 第4章 Rails風味のRuby（準備中）
 * 第5章 レイアウトを作成する（準備中）
 * 第6章 ユーザーのモデルを作成する（準備中）
@@ -130,7 +130,7 @@ $ ruby -v
 
 ```
 
-rbenvの操作自体は、[phpenvで慣れ親しんでいる](https://blog.ttskch.com/mac-phpenv-nodebrew/) ので戸惑いはないですね😁
+rbenvの操作自体は、[phpenvで慣れ親しんでいる](https://zenn.dev/ttskch/articles/2d05e5e3fd6083) ので戸惑いはないですね😁
 
 しかし、rbenvにしても結局 `~/.rbenv/shims/bundle` にBundler `2.1.2` がインストールされてしまい、グローバルでこれではなく `gem install` したBundlerを優先して使う方法がさっぱり分かりません😓
 
