--- a/articles/cd754b537f10b9.md
+++ b/articles/cd754b537f10b9.md
@@ -13,12 +13,12 @@ published_at: 2020-12-03
 
 [Symfony Advent Calendar 2020](https://qiita.com/advent-calendar/2020/symfony) の3日目の記事です！🎄🌙小ネタですみません！
 
-昨日も僕の記事で、[[Symfony][Doctrine] COUNT()やCONCAT()の結果でORDER BYする方法](https://blog.ttskch.com/symfony-doctrine-count-concat-orderby/) でした✨
+昨日も僕の記事で、[[Symfony][Doctrine] COUNT()やCONCAT()の結果でORDER BYする方法](https://zenn.dev/ttskch/articles/9c2af17d77657e) でした✨
 
 ちなみに、僕はよく [TwitterにもSymfonyネタを呟いている](https://twitter.com/search?q=from%3Attskch%20(symfony%20OR%20doctrine)&src=typed_query&f=live) ので、よろしければぜひ [フォローしてやってください🕊🤲](https://twitter.com/ttskch)
 
 > あと、この記事とよく似た内容の以下のような記事もあるので、よろしければあわせてご参照ください🤲
-> [[Symfony/Form] 子FormTypeの特定の項目をそのユースケースでのみ必須にする方法 | blog.ttskch](https://blog.ttskch.com/symfony-form-modify-options-of-child-formtype/)
+> [[Symfony/Form] 子FormTypeの特定の項目をそのユースケースでのみ必須にする方法](https://zenn.dev/ttskch/articles/5aa4db83d61f3d)
 
 # やりたいこと
 
