--- a/articles/d9849cb199b691.md
+++ b/articles/d9849cb199b691.md
@@ -15,7 +15,7 @@ published_at: 2020-12-19
 
 [Symfony Advent Calendar 2020](https://qiita.com/advent-calendar/2020/symfony) の19日目の記事です！🎄🌙
 
-昨日も僕の記事で、[[Symfony] 機能テストでCSRFトークンを送る方法](https://blog.ttskch.com/symfony-functional-test-send-csrf-token/) でした✨
+昨日も僕の記事で、[[Symfony] 機能テストでCSRFトークンを送る方法](https://zenn.dev/ttskch/articles/cdedca841727c2) でした✨
 
 > ちなみに、僕はよく [TwitterにもSymfonyネタを呟いている](https://twitter.com/search?q=from%3Attskch%20(symfony%20OR%20doctrine)&src=typed_query&f=live) ので、よろしければぜひ [フォローしてやってください🕊🤲](https://twitter.com/ttskch)
 
@@ -172,7 +172,7 @@ Doctrineの [Single Table Inheritance](https://www.doctrine-project.org/projects
 
 > Single Table Inheritanceの詳細については以下の過去記事をご参照ください。
 >
-> [[Symfony][Doctrine] Single Table Inheritanceを使ってエンティティに基底クラスを持たせる | blog.ttskch](https://blog.ttskch.com/symfony-doctrine-single-table-inheritance/)
+> [[Symfony][Doctrine] Single Table Inheritanceを使ってエンティティに基底クラスを持たせる](https://zenn.dev/ttskch/articles/890af3fe4e0a92)
 
 ```php
 // src/Entity/File.php
