--- a/articles/e0623332eec59a.md
+++ b/articles/e0623332eec59a.md
@@ -11,7 +11,7 @@ published_at: 2020-04-04
 この記事は、2020-04-04に別のブログ媒体に投稿した記事のアーカイブです。
 :::
 
-[フリーランスになるにあたってやったことまとめ](https://blog.ttskch.com/what-i-did-to-be-a-freelance/) という記事で、健康保険の選択肢がいくつかある中で今回は任意継続保険制度を利用したという話をしました。
+[フリーランスになるにあたってやったことまとめ](https://zenn.dev/ttskch/articles/f3464f62c165c6) という記事で、健康保険の選択肢がいくつかある中で今回は任意継続保険制度を利用したという話をしました。
 
 フリーランスになるにあたって調べた中でも健康保険周りは特にややこしかったので、ここだけ改めて整理してみます。
 
