--- a/articles/e06f8c547fd774.md
+++ b/articles/e06f8c547fd774.md
@@ -15,7 +15,7 @@ published_at: 2020-07-20
 
 そこで、Doctrine Migrationsによるマイグレーションを自動テストする方法をご紹介します。（僕が考えたやり方なので、あくまで一例と思ってください🙏）
 
-> [[Symfony][Doctrine] 外部キーの付け替えを伴うマイグレーションスクリプトの書き方 | blog.ttskch](https://blog.ttskch.com/symfony-doctrine-migrations-with-switching-foreign-keys/)
+> [[Symfony][Doctrine] 外部キーの付け替えを伴うマイグレーションスクリプトの書き方](https://zenn.dev/ttskch/articles/47f760e8a3d57e)
 
 昨日書いたこちらの記事がちょうどいい例なので、こういう外部キー制約の付け替えを伴うマイグレーションをしたときに、ちゃんと期待どおりにエンティティの関連が維持されていることを確認するテストを書いてみたいと思います。
 
@@ -334,7 +334,7 @@ $this->importMysqldump();
 
 `importMysqldump()` はmysqldumpのインポートを実行しています。こちらは [Processコンポーネント](https://symfony.com/doc/current/components/process.html) を使って直接実行しています。
 
-> [こちらの過去記事](https://blog.ttskch.com/symfony-mysqldump-before-doctrine-migrations/) でも似たようなコードを紹介しているので参考になるかもしれません。
+> [こちらの過去記事](https://zenn.dev/ttskch/articles/20c5cbcd1d96e2) でも似たようなコードを紹介しているので参考になるかもしれません。
 
 `testUp()` の残りのコードは以下のとおりです。
 
@@ -359,7 +359,7 @@ for ($i = 0; $i < count($oldItems); $i++) {
 
 `migrateTo()` は先に見た `dropSchema()` と同じ要領で `doctrine:migrations:migrate` コマンドを実行しているだけですが、一点、インタラクションを無効にするために `$input->setInteractive(false);` を実行しているところだけ要注意です。
 
-[こちらの過去記事](https://blog.ttskch.com/symfony-mysqldump-before-doctrine-migrations/#%E3%82%B3%E3%83%9E%E3%83%B3%E3%83%89%E3%81%8C%E5%8F%97%E3%81%91%E5%8F%96%E3%81%A3%E3%81%9F%E3%82%AA%E3%83%97%E3%82%B7%E3%83%A7%E3%83%B3%E3%82%92%E3%81%99%E3%81%B9%E3%81%A6-doctrine-migrations-migrate-%E3%82%B3%E3%83%9E%E3%83%B3%E3%83%89%E3%81%AB%E3%81%9D%E3%81%AE%E3%81%BE%E3%81%BE%E6%B8%A1%E3%81%99) でも触れましたが、インタラクションの無効化だけはコマンド引数として `'--no-interaction' => true` を渡してもダメで、 `setInteractive(false)` を実行する必要があるようです。
+[こちらの過去記事](https://zenn.dev/ttskch/articles/20c5cbcd1d96e2#%E3%82%B3%E3%83%9E%E3%83%B3%E3%83%89%E3%81%8C%E5%8F%97%E3%81%91%E5%8F%96%E3%81%A3%E3%81%9F%E3%82%AA%E3%83%97%E3%82%B7%E3%83%A7%E3%83%B3%E3%82%92%E3%81%99%E3%81%B9%E3%81%A6-doctrine-migrations-migrate-%E3%82%B3%E3%83%9E%E3%83%B3%E3%83%89%E3%81%AB%E3%81%9D%E3%81%AE%E3%81%BE%E3%81%BE%E6%B8%A1%E3%81%99) でも触れましたが、インタラクションの無効化だけはコマンド引数として `'--no-interaction' => true` を渡してもダメで、 `setInteractive(false)` を実行する必要があるようです。
 
 ## `testDown()`
 
