--- a/articles/ee1e8fae5e5773.md
+++ b/articles/ee1e8fae5e5773.md
@@ -109,7 +109,7 @@ public function buildForm(FormBuilderInterface $builder, array $options)
 
 `UserType` からしか使われないようならわざわざ独立したFormTypeにしておく必要はないかもしれませんが、場合によっては他のエンティティが `対象とする部署` のような形で `部署` の情報を持つような仕様も全然あるでしょうし、[EasyAdminBundle](https://symfony.com/doc/2.x/bundles/EasyAdminBundle/index.html) を使っていて管理画面のフォームもテキストフィールドではなく選択式にしたいという場合にも使えます。
 
-> 参考：[[Symfony] EasyAdminBundleで普通のテキストプロパティを選択形式にする | blog.ttskch](https://blog.ttskch.com/symfony-easy-admin-choice-type-for-text-property/#%E9%81%B8%E6%8A%9E%E8%82%A2%E3%82%92%E3%83%8F%E3%83%BC%E3%83%89%E3%82%B3%E3%83%BC%E3%83%89%E3%81%97%E3%81%9F%E3%81%8F%E3%81%AA%E3%81%84)
+> 参考：[[Symfony] EasyAdminBundleで普通のテキストプロパティを選択形式にする](https://zenn.dev/ttskch/articles/36e09bccbe6b59#%E9%81%B8%E6%8A%9E%E8%82%A2%E3%82%92%E3%83%8F%E3%83%BC%E3%83%89%E3%82%B3%E3%83%BC%E3%83%89%E3%81%97%E3%81%9F%E3%81%8F%E3%81%AA%E3%81%84)
 
 # まとめ
 
