--- a/articles/f0b08200603c0f.md
+++ b/articles/f0b08200603c0f.md
@@ -33,7 +33,7 @@ class FooControllerTest extends WebTestCase
 
 テスト時にログインをシミュレートするために、ログインに使用するユーザーがデータベースに登録されている必要があるので、yamlフィクスチャなどを使ってテスト用データベースにユーザーを作成します。
 
-Symfonyで機能テスト時にyamlフィクスチャを使う方法については [こちらの記事](https://blog.ttskch.com/symfony4-liip-test-fixtures-bundle-practice/) で詳しく説明していますので、ご参照ください。
+Symfonyで機能テスト時にyamlフィクスチャを使う方法については [こちらの記事](https://zenn.dev/ttskch/articles/85cfc7d291b52a) で詳しく説明していますので、ご参照ください。
 
 データベースに登録するユーザーのパスワードは平文ではなくエンコードしたものにしなければいけないので、以下のようにSecurityバンドルのコマンドでエンコード後の文字列を用意します。
 
@@ -147,7 +147,7 @@ Symfony 4.4以上を使っている場合、ここまでに書いたテストを
 
 今回のように未ログインのクライアントとログイン済みのクライアントを並行して作成しようとするとこの非推奨に抵触することになります。
 
-[こちらの記事](https://blog.ttskch.com/symfony-webtestcase-createclient-deprecated/) に詳しく書いていますが `self::createClient()` が実行される前に常に `self::ensureKernelShutdown()` を実行するようにしておけばよいので、以下のようにして `createClient()` メソッドをオーバーライドしておけばdeprecation notionceは解消できます👍
+[こちらの記事](https://zenn.dev/ttskch/articles/2007864cec38ad) に詳しく書いていますが `self::createClient()` が実行される前に常に `self::ensureKernelShutdown()` を実行するようにしておけばよいので、以下のようにして `createClient()` メソッドをオーバーライドしておけばdeprecation notionceは解消できます👍
 
 ```diff
 + protected static function createClient(array $options = [], array $server = []): KernelBrowser
