--- a/articles/f17ab2a095030c.md
+++ b/articles/f17ab2a095030c.md
@@ -15,7 +15,7 @@ published_at: 2020-12-07
 
 [Symfony Advent Calendar 2020](https://qiita.com/advent-calendar/2020/symfony) の7日目の記事です！🎄🌙 小ネタですみません！
 
-昨日も僕の記事で、[[Symfony/Form] 子FormTypeの特定の項目をそのユースケースでのみ必須にする方法](https://blog.ttskch.com/symfony-form-modify-options-of-child-formtype/) でした✨
+昨日も僕の記事で、[[Symfony/Form] 子FormTypeの特定の項目をそのユースケースでのみ必須にする方法](https://zenn.dev/ttskch/articles/5aa4db83d61f3d) でした✨
 
 > ちなみに、僕はよく [TwitterにもSymfonyネタを呟いている](https://twitter.com/search?q=from%3Attskch%20(symfony%20OR%20doctrine)&src=typed_query&f=live) ので、よろしければぜひ [フォローしてやってください🕊🤲](https://twitter.com/ttskch)
 
