--- a/articles/f3464f62c165c6.md
+++ b/articles/f3464f62c165c6.md
@@ -11,7 +11,7 @@ published_at: 2020-04-03
 この記事は、2020-04-03に別のブログ媒体に投稿した記事のアーカイブです。
 :::
 
-先日、会社役員から[フリーランスになりました](https://blog.ttskch.com/thank-you-quartet-communications/)。
+先日、会社役員から[フリーランスになりました](https://note.com/ttskch/n/n4840e862f343)。
 
 今回フリーランスになるにあたってやったこと・検討したことを簡単にまとめておきます。
 
