--- a/articles/f4cb4609e70773.md
+++ b/articles/f4cb4609e70773.md
@@ -80,7 +80,7 @@ $ bin/console doctrine:migrations:migrate
 
 もしすでにjson型式のデータが入っている場合は、マイグレーションでカラムの型だけを変更しても、中に入っているデータがjson型式だとアプリでunserializeしようとしてエラーになってしまうので、データの更新のためのマイグレーションも書く必要があります。
 
-Doctrine Migrationsでデータ更新のマイグレーションを手動で書く方法については [こちらの記事](https://blog.ttskch.com/symfony-doctrine-migrations-handmade-updating-scripts/) をご参照ください。
+Doctrine Migrationsでデータ更新のマイグレーションを手動で書く方法については [こちらの記事](https://zenn.dev/ttskch/articles/a629dd3b9b8398) をご参照ください。
 
 # 解決策2
 
