--- a/articles/f9701ccf95d7c7.md
+++ b/articles/f9701ccf95d7c7.md
@@ -280,6 +280,6 @@ class WebTestCase extends BaseWebTestCase
 
 細かな使い方など以下の過去記事で詳しく解説しているので、よろしければぜひ試してみていただけると嬉しいです！
 
-> [[Symfony] シンプルでカスタマイズしやすい最強のページネーションバンドル | blog.ttskch](https://blog.ttskch.com/symfony-most-thin-and-simple-pagination-bundle/)
+> [[Symfony] シンプルでカスタマイズしやすい最強のページネーションバンドル](https://zenn.dev/ttskch/articles/d26f13131212bc)
 
 [Symfony Advent Calendar 2021](https://qiita.com/advent-calendar/2021/symfony)、明日は [@ippey_s](https://twitter.com/ippey_s) さんです！お楽しみに！
