--- a/books/2fa3612c68c2d9/10.md
+++ b/books/2fa3612c68c2d9/10.md
@@ -44,7 +44,7 @@ title: "Security Voterを使ってユーザー編集・削除の権限を整理"
 
 なお、Security Voterについては以下の過去記事で詳しく説明していますので、ぜひあわせてご参照ください✋
 
-> [[Symfony] Security Voterを使って「リソースの所有者でないと編集不可」を実装してみよう | blog.ttskch](https://blog.ttskch.com/symfony-security-voter/)
+> [[Symfony] Security Voterを使って「リソースの所有者でないと編集不可」を実装してみよう](https://zenn.dev/ttskch/articles/5ef96bf6e9d835)
 
 ## Voterを実装
 
