--- a/books/2fa3612c68c2d9/12.md
+++ b/books/2fa3612c68c2d9/12.md
@@ -16,7 +16,7 @@ title: "サービスクラスを作成したらユニットテストを書く"
 
 なお、自動テスト・ユニットテストについては以下の過去記事でとても詳しく解説していますので、ぜひご参照ください✋
 
-> [【ユニットテスト入門】自動テストの意義とPHPでの具体的な使い方【基礎編】 | blog.ttskch](https://blog.ttskch.com/whats-unit-test-php/)
+> [【ユニットテスト入門】自動テストの意義とPHPでの具体的な使い方【基礎編】](https://zenn.dev/ttskch/articles/22b6d2b1209b97)
 
 ## 例
 
