--- a/books/2fa3612c68c2d9/14.md
+++ b/books/2fa3612c68c2d9/14.md
@@ -71,7 +71,7 @@ class PersonType extends AbstractType
 
 `fullName` フィールドに対して何やらごちゃごちゃやっていますが、これについては以下の過去記事で解説しているのでご参照ください🙏
 
-> [[Symfony] コレクションプロパティのバリデーションにおいて子オブジェクト側のNotBlank制約が無視されるケースについて | blog.ttskch](https://blog.ttskch.com/symfony-not-blank-validation-for-collection-property/)
+> [[Symfony] コレクションプロパティのバリデーションにおいて子オブジェクト側のNotBlank制約が無視されるケースについて](https://zenn.dev/ttskch/articles/c596276f0d50d3)
 
 ```php
 // src/Form/CustomerType.php
@@ -124,7 +124,7 @@ class CustomerType extends AbstractType
 
 CollectionTypeのオプションがやや複雑ですが、これについても以下の過去記事をご参照ください🙏
 
-> [[Symfony/Form] CollectionTypeの基本的な使い方 | blog.ttskch](https://blog.ttskch.com/symfony-form-collection-type-basic-usage/)
+> [[Symfony/Form] CollectionTypeの基本的な使い方](https://zenn.dev/ttskch/articles/3e846a1aa5eb40)
 
 `CustomerType` の `state` フィールドの `choices` が `CustomerConstant::getValidStates()` を引いているので、選択肢が増減しても `CustomerConstant` クラスを修正するだけでバリデーションもFormTypeも対応完了できて嬉しいですね👌
 
