--- a/books/2fa3612c68c2d9/18.md
+++ b/books/2fa3612c68c2d9/18.md
@@ -12,7 +12,7 @@ https://github.com/ttskch/symfony-example-app/tree/tagged
 また、実際に動作するデモ環境もあるので、ぜひ触ってみてください。（Herokuの無料プランなので初回アクセス重いです🙏）
 https://symfony-example-app-tagged.herokuapp.com/ja/
 
-ちなみに、この本は [Symfony Advent Calendar 2020](https://qiita.com/advent-calendar/2020/symfony) の最終日用の記事として書きました。（僕のブログにも [この本と同じ内容の記事](https://blog.ttskch.com/symfony-realworld-example-app/) が上がっています）
+ちなみに、この本は [Symfony Advent Calendar 2020](https://qiita.com/advent-calendar/2020/symfony) の最終日用の記事として書きました。（僕のブログにも [この本と同じ内容の記事](https://zenn.dev/ttskch/articles/876149ba8a5183) が上がっています）
 
 2020年のSymfony Advent Calendarはなかなか寄稿者が集まらず、直前まで埋まらなかった日を躍起になって埋めていたら25日中15日も僕が書いた形になってしまいました😅
 
@@ -20,5 +20,5 @@ https://symfony-example-app-tagged.herokuapp.com/ja/
 
 ブログやTwitterでよくSymfonyについての情報を発信しているので、よろしければこの機会にフォローしていただけると嬉しいです！
 
-* [blog.ttskch](https://blog.ttskch.com/)
+* [blog.ttskch](https://zenn.dev/ttskch/articles/b838aab11f44fc)
 * [@ttskch](https://twitter.com/ttskch)
