--- a/books/2fa3612c68c2d9/2.md
+++ b/books/2fa3612c68c2d9/2.md
@@ -16,7 +16,7 @@ title: "CI/CDを設定"
 
 具体的な設定方法などは以下の過去記事をご参照ください。
 
-> [[保存版] CircleCI 2.0による自動デプロイの導入手順まとめ | blog.ttskch](https://blog.ttskch.com/circleci-2-0-continuous-deployment/)
+> [[保存版] CircleCI 2.0による自動デプロイの導入手順まとめ](https://zenn.dev/ttskch/articles/2598d4acbf342c)
 
 なお、Symfonyプロジェクトの場合は、Deployerの設定ファイルは以下のように `recipe/symfony4.php` を使うことで簡略化できます。
 
