--- a/books/2fa3612c68c2d9/3.md
+++ b/books/2fa3612c68c2d9/3.md
@@ -50,7 +50,7 @@ $ composer require security
 
 細かな手順は以下の過去記事をご参照ください。
 
-> [[Symfony] FOSUserBundleを使わなくても15分でユーザーログインは実装できる | blog.ttskch](https://blog.ttskch.com/symfony-no-longer-needs-fosuserbundle/)
+> [[Symfony] FOSUserBundleを使わなくても15分でユーザーログインは実装できる](https://zenn.dev/ttskch/articles/edbc02bc6881a3)
 
 ここでは、コントローラのクラス名はサジェストされる `SecurityController` ではなく `UserController` にします。
 
@@ -431,7 +431,7 @@ App\EntityListener\:
 
 以下の過去記事でも詳細に解説しているのであわせてご参照ください。
 
-> [[Symfony] UserエンティティにplainPasswordプロパティを設けて扱いやすくする | blog.ttskch](/symfony-security-user-with-plain-password-property)
+> [[Symfony] UserエンティティにplainPasswordプロパティを設けて扱いやすくする](https://zenn.dev/ttskch/articles/a518f850808953)
 
 ## 5. エンティティをTimestampableに
 
