--- a/books/2fa3612c68c2d9/4.md
+++ b/books/2fa3612c68c2d9/4.md
@@ -19,7 +19,7 @@ title: "安全なマイグレーションコマンドを作成（など）"
 
 詳細は以下の過去記事をご参照ください。
 
-> [[Symfony] DBマイグレーションの前に常にmysqldumpを実行するようにして心の平穏ゲットだぜ！ | blog.ttskch](https://blog.ttskch.com/symfony-mysqldump-before-doctrine-migrations/)
+> [[Symfony] DBマイグレーションの前に常にmysqldumpを実行するようにして心の平穏ゲットだぜ！](https://zenn.dev/ttskch/articles/20c5cbcd1d96e2)
 
 コマンドを実装したら、 `deploy.php` に以下のように追記して常にこのコマンドを使ってマイグレーションを実行するようにします。
 
@@ -41,4 +41,4 @@ title: "安全なマイグレーションコマンドを作成（など）"
 
 こちらも詳細は以下の過去記事をご参照ください。
 
-> [[超簡単] SymfonyプロジェクトにSentryを導入する | blog.ttskch](https://blog.ttskch.com/symfony-sentry/)
+> [[超簡単] SymfonyプロジェクトにSentryを導入する](https://zenn.dev/ttskch/articles/73d8bdce973b0b)
