--- a/books/2fa3612c68c2d9/9.md
+++ b/books/2fa3612c68c2d9/9.md
@@ -64,7 +64,7 @@ class UserDeleteType extends AbstractType
 
 この手法については以下の過去記事で詳しく説明していますので、ご参照ください✋
 
-> [[Symfony] 循環参照しているエンティティのフォームで自分自身を選択できないようにする | blog.ttskch](https://blog.ttskch.com/symfony-omit-oneself-from-formtype-of-circular-referencing-entity/)
+> [[Symfony] 循環参照しているエンティティのフォームで自分自身を選択できないようにする](https://zenn.dev/ttskch/articles/66cf2aa0a95eb2)
 
 ## コントローラ
 
