--- a/articles/07bd8c54d5fdd3.md
+++ b/articles/07bd8c54d5fdd3.md
@@ -94,7 +94,7 @@ https://twitter.com/ttskch/status/1337373726405357570
 
 > テストコードにおける `$client->disableReboot()` の意味は以下の過去記事をご参照ください。
 > 
-> [[Symfony] 機能テストでコントローラに注入しているサービスをモックする方法 | blog.ttskch](https://blog.ttskch.com/symfony-how-to-mock-service-on-functional-test/#%E6%B3%A8%E6%84%8F%E7%82%B9%EF%BC%9A%E4%B8%80%E5%BA%A6%E7%94%BB%E9%9D%A2%E3%82%92request%E3%81%97%E3%81%A6%E3%81%9D%E3%81%AE%E7%94%BB%E9%9D%A2%E3%81%AE%E3%83%95%E3%82%A9%E3%83%BC%E3%83%A0%E3%82%92%E9%80%81%E4%BF%A1%E3%81%99%E3%82%8B%E9%9A%9B%E3%81%AB%E3%83%A2%E3%83%83%E3%82%AF%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%A6%E3%81%BB%E3%81%97%E3%81%84%E5%A0%B4%E5%90%88%E3%81%AF-client-disablereboot-%E3%81%8C%E5%BF%85%E8%A6%81)
+> [[Symfony] 機能テストでコントローラに注入しているサービスをモックする方法](https://zenn.dev/ttskch/articles/ab2973d60ead0a#%E6%B3%A8%E6%84%8F%E7%82%B9%EF%BC%9A%E4%B8%80%E5%BA%A6%E7%94%BB%E9%9D%A2%E3%82%92request%E3%81%97%E3%81%A6%E3%81%9D%E3%81%AE%E7%94%BB%E9%9D%A2%E3%81%AE%E3%83%95%E3%82%A9%E3%83%BC%E3%83%A0%E3%82%92%E9%80%81%E4%BF%A1%E3%81%99%E3%82%8B%E9%9A%9B%E3%81%AB%E3%83%A2%E3%83%83%E3%82%AF%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%A6%E3%81%BB%E3%81%97%E3%81%84%E5%A0%B4%E5%90%88%E3%81%AF-client-disablereboot-%E3%81%8C%E5%BF%85%E8%A6%81)
 
 # `@Template` はほぼ非推奨
 
