--- a/articles/23cbe99ac4271a.md
+++ b/articles/23cbe99ac4271a.md
@@ -162,7 +162,7 @@ export default {
 
 ともあれ、参考になれば幸いです！
 
-> ちなみに、冒頭に貼ったキャプチャ画像は、 [こちらの記事](https://blog.ttskch.com/vuetify-container-in-app-bar-with-narrow-width/) で解説した方法で `$container-max-widths` の値を変更してあります。
+> ちなみに、冒頭に貼ったキャプチャ画像は、 [こちらの記事](https://zenn.dev/ttskch/articles/ca7f9fdac24050) で解説した方法で `$container-max-widths` の値を変更してあります。
 
 # まとめ
 
