--- a/articles/7423c0ab5104fd.md
+++ b/articles/7423c0ab5104fd.md
@@ -13,9 +13,9 @@ published_at: 2020-05-20
 
 # はじめに
 
-このブログは [VuePress + Netlifyという構成で運用しています](https://blog.ttskch.com/hello-vuepress-theme-blog-vuetify/)。
+このブログは [VuePress + Netlifyという構成で運用しています](https://zenn.dev/ttskch/articles/b908a1f6ff7188)。
 
-今まではMarkdownファイルを手元で書いて公開するタイミングでGitHubにpushするという方法をとっていましたが、[esaで記事を書いたら自動でGitHubに投稿されるようにしたいと思っていました](https://blog.ttskch.com/hello-vuepress-theme-blog-vuetify/#%E3%81%82%E3%81%A8%E3%81%AFesa%E3%81%A7%E8%A8%98%E4%BA%8B%E3%82%92%E6%9B%B8%E3%81%91%E3%82%8B%E3%82%88%E3%81%86%E3%81%AB%E3%81%97%E3%81%9F%E3%81%84)。
+今まではMarkdownファイルを手元で書いて公開するタイミングでGitHubにpushするという方法をとっていましたが、[esaで記事を書いたら自動でGitHubに投稿されるようにしたいと思っていました](https://zenn.dev/ttskch/articles/b908a1f6ff7188#%E3%81%82%E3%81%A8%E3%81%AFesa%E3%81%A7%E8%A8%98%E4%BA%8B%E3%82%92%E6%9B%B8%E3%81%91%E3%82%8B%E3%82%88%E3%81%86%E3%81%AB%E3%81%97%E3%81%9F%E3%81%84)。
 
 リンク先の記事にも書いてあるとおり、はじめは [esa標準のGitHub Webhook](https://docs.esa.io/posts/176)  を使えばできるかと思ったのですが、VuePressが [記事のメタデータをfrontmatterで管理する仕様](https://vuepress.vuejs.org/guide/frontmatter.html) なので、esaが標準で付加してくるfrontmatter（[記事のURLに `.md` を付けたとき](https://docs.esa.io/posts/176.md) に先頭に付加されているyaml部分）のままだと正しく記事データとして使えませんでした。
 
