--- a/articles/7e9101660f5d2d.md
+++ b/articles/7e9101660f5d2d.md
@@ -90,7 +90,7 @@ published_at: 2020-01-26
 > - `http://example.com/hoge/fuga/`
 > - `http://example.com/hoge/fuga`
 >
-> これらのURLは全て同じページを指すことが多いです。（実は例外も多々あります。詳細は [こちらの記事](https://blog.ttskch.com/lets-understand-url-structure/) にまとめてあるので、よろしければご参照ください。）
+> これらのURLは全て同じページを指すことが多いです。（実は例外も多々あります。詳細は [こちらの記事](https://zenn.dev/ttskch/articles/841a472bfefb44) にまとめてあるので、よろしければご参照ください。）
 
 # IPアドレス
 
