--- a/articles/81c7e670b2d6dc.md
+++ b/articles/81c7e670b2d6dc.md
@@ -54,7 +54,7 @@ h1[id]:before, h2[id]:before, h3[id]:before, h4[id]:before, h5[id]:before, h6[id
 }
 ```
 
-> なお、下図のように見出しタグの `hover` でリンクを表示させたい場合の当たり判定の調整方法については [こちらの記事](https://blog.ttskch.com/css-fix-hover-area-of-header-anchor) で解説していますので、よろしければあわせてご参照ください。
+> なお、下図のように見出しタグの `hover` でリンクを表示させたい場合の当たり判定の調整方法については [こちらの記事](https://zenn.dev/ttskch/articles/f9fe7b59ff22cc) で解説していますので、よろしければあわせてご参照ください。
 >
 > ![](https://tva1.sinaimg.cn/large/007S8ZIlgy1gepd3qcoktg304h02d0ss.gif)
 
