--- a/articles/890af3fe4e0a92.md
+++ b/articles/890af3fe4e0a92.md
@@ -13,7 +13,7 @@ published_at: 2020-07-21
 
 # はじめに
 
-[[Symfony][Doctrine] MappedSuperclassを使ってエンティティに基底クラスを持たせる | blog.ttskch](https://blog.ttskch.com/symfony-doctrine-mapped-superclass/)
+[[Symfony][Doctrine] MappedSuperclassを使ってエンティティに基底クラスを持たせる](https://zenn.dev/ttskch/articles/675931a29dfdfa)
 
 こちらの記事で `MappedSuperclass` を使う方法を紹介しましたが、今回は [`Single Table Inheritance`](https://www.doctrine-project.org/projects/doctrine-orm/en/2.7/reference/inheritance-mapping.html#single-table-inheritance) バージョンです。
 
@@ -94,7 +94,7 @@ class Freelancer extends Worker
 
 ## OneToMany
 
-`MappedSuperclass` を使った継承は、他のクラスから基底クラスを直接参照されることを想定しておらず、[他のエンティティから基底クラスに対してManyToOneでリレーションシップを張ることができませんでした](https://blog.ttskch.com/symfony-doctrine-mapped-superclass/#%E4%BB%96%E3%81%AE%E3%82%A8%E3%83%B3%E3%83%86%E3%82%A3%E3%83%86%E3%82%A3%E3%81%8B%E3%82%89%E5%9F%BA%E5%BA%95%E3%82%AF%E3%83%A9%E3%82%B9%E3%81%AB%E5%AF%BE%E3%81%97%E3%81%A6manytoone%E3%81%A7%E3%83%AA%E3%83%AC%E3%83%BC%E3%82%B7%E3%83%A7%E3%83%B3%E3%82%B7%E3%83%83%E3%83%97%E3%82%92%E5%BC%B5%E3%82%8B%E3%81%93%E3%81%A8%E3%81%AF%E3%81%A7%E3%81%8D%E3%81%AA%E3%81%84) が、 `Single Table Inheritance` ではそれも問題なく対応可能です。
+`MappedSuperclass` を使った継承は、他のクラスから基底クラスを直接参照されることを想定しておらず、[他のエンティティから基底クラスに対してManyToOneでリレーションシップを張ることができませんでした](https://zenn.dev/ttskch/articles/675931a29dfdfa#%E4%BB%96%E3%81%AE%E3%82%A8%E3%83%B3%E3%83%86%E3%82%A3%E3%83%86%E3%82%A3%E3%81%8B%E3%82%89%E5%9F%BA%E5%BA%95%E3%82%AF%E3%83%A9%E3%82%B9%E3%81%AB%E5%AF%BE%E3%81%97%E3%81%A6manytoone%E3%81%A7%E3%83%AA%E3%83%AC%E3%83%BC%E3%82%B7%E3%83%A7%E3%83%B3%E3%82%B7%E3%83%83%E3%83%97%E3%82%92%E5%BC%B5%E3%82%8B%E3%81%93%E3%81%A8%E3%81%AF%E3%81%A7%E3%81%8D%E3%81%AA%E3%81%84) が、 `Single Table Inheritance` ではそれも問題なく対応可能です。
 
 過去記事の例を借りて、「 `労働者` が `仕事` を所有する」というリレーションシップを設定してみましょう。
 
