--- a/articles/8e841fd05bf60d.md
+++ b/articles/8e841fd05bf60d.md
@@ -13,7 +13,7 @@ published_at: 2020-05-05
 
 DigitalOceanのUbuntu 18.04イメージにPHP7.3のLAMP環境とSSL化をセットアップして、Deployerでデプロイできるようにするまでのすべての手順を丁寧に列挙します。
 
-> さくらのVPS版は [こちら](https://blog.ttskch.com/sakura-vps-ubuntu1804-apache-php73)
+> さくらのVPS版は [こちら](https://zenn.dev/ttskch/articles/d43d001c9b1b2d)
 
 # 1. Dropletを作成
 
@@ -146,7 +146,7 @@ GitHubリポジトリがprivateな場合は、デプロイ時にサーバーがp
 
 **ローカル側**
 
-Deployerの使い方については [こちらの過去記事](https://blog.ttskch.com/circleci-2-0-continuous-deployment/#_4-%E3%83%97%E3%83%AD%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E3%81%AE%E3%82%B3%E3%83%BC%E3%83%89%E3%83%99%E3%83%BC%E3%82%B9%E3%81%ABdeployer%E3%81%AE%E8%A8%AD%E5%AE%9A%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB%E3%82%92%E8%BF%BD%E5%8A%A0) をご参照ください。
+Deployerの使い方については [こちらの過去記事](https://zenn.dev/ttskch/articles/2598d4acbf342c#_4-%E3%83%97%E3%83%AD%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E3%81%AE%E3%82%B3%E3%83%BC%E3%83%89%E3%83%99%E3%83%BC%E3%82%B9%E3%81%ABdeployer%E3%81%AE%E8%A8%AD%E5%AE%9A%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB%E3%82%92%E8%BF%BD%E5%8A%A0) をご参照ください。
 
 ```bash
 $ dep deploy
