--- a/articles/c9fa0fc304c657.md
+++ b/articles/c9fa0fc304c657.md
@@ -142,6 +142,6 @@ onTap: () async {
 
 あとそもそも `SnackBar` を使うために `Builder` でラップして `context` を変えている点については
 
-> [[Flutter] SnackBarを使おうとすると Scaffold.of() called with（略）と言われるときの対応 | blog.ttskch](https://blog.ttskch.com/flutter-snackbar-context-not-contain-scaffold)
+> [[Flutter] SnackBarを使おうとすると Scaffold.of() called with（略）と言われるときの対応](https://zenn.dev/ttskch/articles/5efbfe52d26157)
 
 をご参照ください。
